--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 
 # reference these in your code with process.env.SECRET
 
-PREFIX=*
+PREFIX=1
 BOT_TOKEN=NzM2NzU3NjgzMDI5Mjc4ODkx.XxzdDw.2mAYOXtJOeQ7mBvVQCTw98cSAz8
 YTAPI_KEY=AIzaSyAnwKf8V_zp__p8rrfih1K3RHkNhIQer3k
 PROJECT_DOMAIN=mazika2
