--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@
 PREFIX=1
 BOT_TOKEN=NzM2NzU3NjgzMDI5Mjc4ODkx.XxzdDw.2mAYOXtJOeQ7mBvVQCTw98cSAz8
 YTAPI_KEY=AIzaSyAnwKf8V_zp__p8rrfih1K3RHkNhIQer3k
-PROJECT_DOMAIN=mazika2
+PROJECT_DOMAIN=khrmusic
 
 
 
